# MCeleM6

./: CMakeLists.txt  README.md
include/: particle3D.h  particlePLK13D.h  particle_manager.h  particle_managerPLK1.h
python/: CMakeLists.txt  main.py  module_2Dplotter.py  module_2Dplotter_PLK1.py  one-node.sh  settingsTemplate
python/logs/Output_example/: conc_id0_MEXp.txt  conc_id0_plk1.txt  conc_id1_MEXp.txt  conc_id1_plk1.txt  conc_id2_plk1.txt  log_MEXp_ratio_slow_fast.txt  log_k_MEXp.txt  log_k_plk1.txt  log_profileAP_MEXp.txt  log_profileAP_plk1.txt  log_v_MEXp.txt  log_v_plk1.txt  summary_parameter.txt
script/: analyzer.py  analyzerConc.py  plotter_3D_t_X.py
src/: CMakeLists.txt  particle3D.cpp  particlePLK13D.cpp  particle_manager.cpp  particle_managerPLK1.cpp
